fixed reservas grid
fixed reservas bug

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,6 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/controllers/estadiaController.js" ></script>
 <script src="js/controllers/gestionEstadiaController.js" ></script>
 <script src="js/controllers/presentacionController.js" ></script>
+<script src="js/controllers/messageController.js" ></script>
 <script src="js/services/loginService.js" ></script>
 <script src="js/services/reservaService.js" ></script>
 <script src="js/services/estadiaService.js" ></script>
