--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/directives/reservaDirective.js" ></script>
 <script src="js/directives/estadiaDirective.js" ></script>
 <script src="js/directives/gestionEstadiaDirective.js" ></script>
+<script src="js/directives/gestionEstadiaOcupanteDirective.js" ></script>
 <script src="js/directives/presentacionDirective.js" ></script>
+<script src="js/directives/fileDirective.js" ></script>
 <script src="js/Filters/customFilter.js" ></script>
 <script src="js/directives/tarifaDirective.js" ></script>
 <script src="js/controllers/modalController.js" ></script>
@@ -34,10 +36,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/controllers/estadiaController.js" ></script>
 <script src="js/controllers/gestionEstadiaController.js" ></script>
 <script src="js/controllers/presentacionController.js" ></script>
+<script src="js/controllers/gestionEstadiaOcupanteController.js" ></script>
 <script src="js/controllers/messageController.js" ></script>
 <script src="js/services/loginService.js" ></script>
 <script src="js/services/reservaService.js" ></script>
 <script src="js/services/estadiaService.js" ></script>
+<script src="js/services/fileUploadService.js" ></script>
+<script src="js/services/estadiaOcupanteService.js" ></script>
+
+<!-- concatenated flow.js + ng-flow libraries -->
+<script src="lib/ng-flow/dist/ng-flow-standalone.min.js"></script>
+
 <link rel="stylesheet" type="text/css" href="lib/angular-ui-grid/ui-grid.min.css">
 <script src="lib/angular-ui-grid/ui-grid.min.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Monda' rel='stylesheet' type='text/css'>
