--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,6 +27,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/directives/gestionEstadiaDirective.js" ></script>
 <script src="js/directives/gestionEstadiaOcupanteDirective.js" ></script>
 <script src="js/directives/presentacionDirective.js" ></script>
+<script src="js/directives/pedidoDirective.js" ></script>
 <script src="js/directives/fileDirective.js" ></script>
 <script src="js/Filters/customFilter.js" ></script>
 <script src="js/directives/tarifaDirective.js" ></script>
@@ -34,6 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/controllers/loginController.js" ></script>
 <script src="js/controllers/reservaController.js" ></script>
 <script src="js/controllers/estadiaController.js" ></script>
+<script src="js/controllers/pedidoController.js" ></script>
 <script src="js/controllers/gestionEstadiaController.js" ></script>
 <script src="js/controllers/presentacionController.js" ></script>
 <script src="js/controllers/gestionEstadiaOcupanteController.js" ></script>
@@ -41,6 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/services/loginService.js" ></script>
 <script src="js/services/reservaService.js" ></script>
 <script src="js/services/estadiaService.js" ></script>
+<script src="js/services/pedidoService.js" ></script>
 <script src="js/services/fileUploadService.js" ></script>
 <script src="js/services/estadiaOcupanteService.js" ></script>
 
