agregado lista habitaciones
agregado lista habitaciones

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,6 +28,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/directives/gestionEstadiaOcupanteDirective.js" ></script>
 <script src="js/directives/presentacionDirective.js" ></script>
 <script src="js/directives/reservaClienteDirective.js" ></script>
+<script src="js/directives/listaHabitacionesDirective.js" ></script>
+<script src="js/directives/reporteServiciosDirective.js" ></script>
 <script src="js/directives/pedidoDirective.js" ></script>
 <script src="js/directives/fileDirective.js" ></script>
 <script src="js/Filters/customFilter.js" ></script>
@@ -36,6 +38,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/controllers/loginController.js" ></script>
 <script src="js/controllers/reservaController.js" ></script>
 <script src="js/controllers/reservaCliController.js" ></script>
+<script src="js/controllers/listaHabitacionesController.js" ></script>
+<script src="js/controllers/serviciosClienteController.js" ></script>
 <script src="js/controllers/estadiaController.js" ></script>
 <script src="js/controllers/pedidoController.js" ></script>
 <script src="js/controllers/gestionEstadiaController.js" ></script>
@@ -47,6 +51,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/services/estadiaService.js" ></script>
 <script src="js/services/pedidoService.js" ></script>
 <script src="js/services/fileUploadService.js" ></script>
+<script src="js/services/listaHabitacionesService.js" ></script>
+<script src="js/services/serviciosClienteService.js" ></script>
 <script src="js/services/estadiaOcupanteService.js" ></script>
 
 <!-- concatenated flow.js + ng-flow libraries -->
